--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .api2 {
@@ -108,7 +108,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .api3 {
@@ -116,7 +116,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .nieuws-content {
@@ -131,7 +131,7 @@ ul li .link {
   grid-row: 2;
   padding: 1rem;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 /* ------------------------------------- about styling -------------------------------------
@@ -153,7 +153,7 @@ ul li .link {
   grid-row: 2/4;
   padding: 1rem;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
 }
 
@@ -168,7 +168,7 @@ h1 {
   grid-row: 2/4;
   width: auto;
   height: auto;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 4px;
   margin: 1rem;
 }
@@ -191,7 +191,7 @@ h1 {
 }
 
 .Text2 {
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   grid-row: 2;
   grid-column: 2;
   padding: 2rem 3rem;
@@ -199,7 +199,7 @@ h1 {
 }
 
 .img-about2 {
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   grid-row: 2;
   grid-column: 4;
 }
@@ -222,7 +222,7 @@ h1 {
 }
 
 .left {
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   background-size: cover;
   grid-column: 1;
   height: 100%;
@@ -259,7 +259,7 @@ h1 {
   border: 2px solid rgba(0, 0, 0, 0);
   border-radius: 7px;
   outline: none;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
   margin-bottom: 22px;
@@ -367,33 +367,53 @@ textarea {
 }
 
 .lid1 {
+  display : grid;
+  grid-template-columns: 9rem auto;
   min-height: 10rem;
   grid-column: 1;
   margin: 1rem;
   padding: 0.5rem;
   height: 40%;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .lid2 {
+  display : grid;
+  grid-template-columns: 9rem auto;
   min-height: 10rem;
   grid-column: 2;
   margin: 1rem;
   padding: 0.5rem;
   height: 40%;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .lid3 {
+  display : grid;
+  grid-template-columns: 9rem auto;
   min-height: 10rem;
   grid-column: 3;
   margin: 1rem;
   padding: 0.5rem;
   height: 40%;
   border-radius: 4px;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.lid-logo{
+  grid-column: 1;
+  padding: 0.5rem;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.lid-info{
+  grid-column: 2;
+  padding: 0.5rem;
+  margin-left: 10px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 }
 
 /* ------------------------------------- word-lid styling ------------------------------------- */
@@ -408,7 +428,7 @@ textarea {
 .word-lid-info {
   grid-column: 2/5;
   grid-row: 4;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 40px;
   border-radius: 10px;
 }
@@ -416,13 +436,13 @@ textarea {
 .word-lid-image {
   grid-column: 2;
   grid-row: 2;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .word-lid-image2 {
   grid-column: 4;
   grid-row: 2;
-  background-color: rgba(230, 230, 230, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .word-lid-info h2 {
