--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ ul li .link {
 .content {
   display: grid;
   position: relative;
-  min-height: 00%;
+  min-height: 100%;
   grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr 1fr 0.3fr;
   grid-template-rows: 2rem 15rem 15rem 1rem 30rem 5rem;
 }
@@ -354,13 +354,13 @@ textarea {
   padding: 5px 20px 0px 20px;
   position: absolute;
   width: 100%;
-  bottom: -10rem;
+  bottom: 0rem;
   display: grid;
   background-color: rgb(22, 22, 22);
   grid-row: last;
   grid-column: 1/8;
-  grid-template-columns: 1fr 1fr 1fr;
-  height: 13rem;
+  grid-template-columns: 1fr;
+  height: 8rem;
 }
 
 .footer h3 {
@@ -385,6 +385,11 @@ textarea {
   box-shadow: 0px 0px 10px 5px rgba(70, 70, 70, 0.19);
   margin: 0px 10px 5px 10px;
   grid-column: 1;
+}
+.icons {
+  text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 .locatie {
