--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,6 @@ ul li .link {
 .content {
   display: grid;
   position: relative;
-  min-height: 100%;
   grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr 1fr 0.3fr;
   grid-template-rows: 2rem 15rem 15rem 1rem 30rem 5rem;
 }
@@ -102,6 +101,7 @@ ul li .link {
 
 .api1 {
   grid-column: 1;
+  height: 25rem;
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
@@ -109,6 +109,7 @@ ul li .link {
 }
 
 .api2 {
+  height: 25rem;
   grid-column: 2;
   margin: 0.5rem;
   padding: 0.5rem;
@@ -117,6 +118,7 @@ ul li .link {
 }
 
 .api3 {
+  height: 25rem;
   grid-column: 3;
   margin: 0.5rem;
   padding: 0.5rem;
@@ -171,8 +173,10 @@ h1 {
 .img-about {
   grid-column: 4/6;
   grid-row: 2/4;
-  width: 38rem;
-  height: 28rem;
+  max-width: 34rem;
+  max-height: 24rem;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
   margin: 1rem;
 }
@@ -354,7 +358,7 @@ textarea {
   padding: 5px 20px 0px 20px;
   position: absolute;
   width: 100%;
-  bottom: 0rem;
+  bottom: -7rem;
   display: grid;
   background-color: rgb(22, 22, 22);
   grid-row: last;
@@ -495,25 +499,26 @@ textarea {
 .word-lid-1 {
   grid-column: 2;
   grid-row: 2;
-
+  padding-left: 80px;
+  max-height: 25rem;
 }
 
 .word-lid-2 {
   grid-column: 4;
   grid-row: 2;
   padding-left: 80px;
-
+  max-height: 25rem;
 }
 
 .word-lid-image {
-  max-height: 25rem;
-  max-width: 50rem;
   margin: 1px;
-  padding-left: 80px;
+  width: fit-content;
+  height: fit-content;
+  width: 25rem;
 }
 
 .word-lid-image2{
-  max-height: 25rem;
+height: 25rem;
 }
 
 .word-lid-info h2 {
@@ -600,7 +605,7 @@ textarea {
 
   .content {
     grid-template-columns: 0.3fr 1fr 0.3fr;
-    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 30rem 3rem;
+    grid-template-rows: 4rem 25rem 25rem 25rem 2rem auto 3rem;
   }
 
   /* ------------------------------------- API styling ------------------------------------- */
@@ -646,10 +651,13 @@ textarea {
     grid-column: 2;
     grid-row: 2;
     padding: 0rem;
+    height:fit-content;
     overflow: scroll;
   }
 
   .img-about {
+    max-height:fit-content;
+    max-width:fit-content;
     grid-column: 3;
     grid-row: 2;
   }
@@ -807,7 +815,7 @@ textarea {
   .content {
     display: grid;
     grid-template-columns: 1rem 1fr 1rem;
-    grid-template-rows: 2rem 25rem 25rem 25rem 1rem 50rem;
+    grid-template-rows: 2rem auto auto auto 1rem auto;
   }
 
   /* ------------------------------------- API styling ------------------------------------- */
@@ -828,6 +836,7 @@ textarea {
 
   .img-about {
     width: 100%;
+    height: auto;
     grid-column: 2;
     grid-row: 3;
     margin: 1.5rem 0 0 0;
@@ -848,6 +857,7 @@ textarea {
   }
 
   .footer {
+    bottom: 0;
     padding: 0;
     position: relative;
   }
@@ -884,8 +894,8 @@ textarea {
   /* ------------------------------------- word-lid styling ------------------------------------- */
   .content-word-lid {
     padding: 0;
-    grid-template-columns: 1rem 1fr 1rem;
-    grid-template-rows: 2rem 20rem 1rem 20rem 2rem auto;
+    grid-template-columns: 1rem 10rem 1rem;
+    grid-template-rows: 2rem auto 1rem auto 2rem auto;
   }
 
   .word-lid-info {
@@ -895,8 +905,26 @@ textarea {
   }
 
   .word-lid-image2 {
+  }
+
+  .word-lid-image {
+    
+  }
+
+  .word-lid-1{
+    grid-column: 2;
+    grid-row: 2;
+    width:fit-content;
+    height: 25rem;
+    padding-left:0;
+  }
+
+  .word-lid-2{
     grid-column: 2;
     grid-row: 4;
+    width:fit-content;
+    padding-left:0;
+
   }
 
   .word-lid-info h2 {
