--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ li:hover .link {
 }
 
 ul li .link {
-  font-weight:400 bold !important;
+  font-weight: 400 bold !important;
   display: block;
   color: rgb(214, 214, 214);
   text-decoration: none;
@@ -76,9 +76,8 @@ ul li .link {
   display: grid;
   grid-template-rows: 7rem auto;
   position: sticky;
-  top:0%;
+  top: 0%;
   scroll-behavior: smooth;
-  
 }
 
 /* --------------------------------------------- Styling Content --------------------------------------------- */
@@ -126,23 +125,27 @@ ul li .link {
   background-color: rgba(255, 255, 255, 0.9);
 }
 
+/* ------------------------------------- news.html styling ------------------------------------- */
+
 .nieuws-content {
   display: grid;
-  grid-template-columns: 20rem 1fr 20rem;
-  grid-template-rows: 8rem 1fr 10rem;
+  grid-template-columns: 0.3fr 1fr 0.3fr;
+  grid-template-rows: 0.2fr 1fr 0.1fr;
+  height: 75vh;
 }
 
 .api4 {
-  min-height: 500px;
+  min-height: 50vh;
+  height: 80%;
   grid-column: 2;
   grid-row: 2;
+  margin: 1rem 0 1rem 0;
   padding: 1rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
 }
 
-/* ------------------------------------- about styling -------------------------------------
- */
+/* ------------------------------------- about styling ------------------------------------- */
 
 .About {
   min-height: 500px;
@@ -181,15 +184,6 @@ h1 {
   margin: 1rem;
 }
 
-.img-about2 {
-  grid-column: 4/6;
-  grid-row: 2/4;
-  width: 48rem;
-  height: 36rem;
-  border-radius: 0px;
-  margin: 0rem;
-}
-
 .img-about3 {
   grid-column: 4/6;
   grid-row: 2/4;
@@ -203,24 +197,20 @@ h1 {
 
 .about-content {
   position: relative;
-  height: 50rem;
 }
 
 .About1 {
-  min-height: 50%;
   display: grid;
-  padding: 5rem 1rem 1rem 1rem;
-  grid-template-columns: 0.2fr 1fr 0.1fr 1fr 0.2fr;
-  grid-template-rows: 0.5fr auto auto 0.5fr;
-  border-radius: 4px;
-
+  padding: 2rem 0.5rem 1rem 0.5rem;
+  grid-template-columns: 2rem 1fr 3rem 1fr 2rem;
+  grid-template-rows: 2rem auto auto 2rem;
 }
 
 .Text2 {
   background-color: rgba(255, 255, 255, 0.9);
   grid-row: 2;
   grid-column: 2;
-  margin-bottom:2rem;
+  margin-bottom: 2rem;
   padding: 2rem 3rem;
   border-spacing: 10%;
   border-radius: 8px;
@@ -240,11 +230,14 @@ h1 {
 .img-about2 {
   grid-row: 2/4;
   grid-column: 4;
-  border-spacing: 10%;
   padding: 1rem 2rem;
-  margin:2rem 0 2rem 0;
+  max-width: 50rem;
+  max-height: 50rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px;
+  margin: 0rem;
 }
-
 
 /* ------------------------------------- contact.html styling -----------------------------------*/
 
@@ -252,27 +245,18 @@ h1 {
   position: relative;
   display: grid;
   grid-template-columns: 0.1fr 1fr 0.1fr;
-  grid-template-rows: 0.1fr 1fr 0.1fr;
+  grid-template-rows: 0.1fr 1fr auto;
+  height: auto;
 }
 
 .context-box {
   margin: 0 5rem 5rem 5rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-column: 2;
   grid-row: 2;
 }
 
-.left {
-  background-size: cover;
-  grid-column: 1;
-  height: 100%;
-  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-  border-radius: 7px;
-}
-
 .right {
-  padding: 25px 40px;
+  padding: 50px 80px;
   border-radius: 7px;
   grid-column: 2;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
@@ -313,7 +297,7 @@ h1 {
 }
 
 textarea {
-  min-height: 150px;
+  min-height: 200px;
 }
 
 .btncontact {
@@ -344,72 +328,22 @@ textarea {
   color: #000;
 }
 
-@media screen and (max-width: 880px) {
-  .contact-box {
-    grid-template-columns: 1fr;
-  }
-  .left {
-    height: 200px;
-  }
-}
 /* ------------------------------------- footer styling ------------------------------------- */
 
 .footer {
-  padding: 5px 20px 0px 20px;
-  position: absolute;
+  position: relative;
   width: 100%;
-  bottom: -7rem;
-  display: grid;
+  display: flexbox;
   background-color: rgb(22, 22, 22);
-  grid-row: last;
-  grid-column: 1/8;
+  bottom: 0;
   grid-template-columns: 1fr;
   height: 8rem;
 }
 
-.footer h3 {
-  margin: 0.5rem;
-  color: white;
-  font-size: 1.2rem;
-  font-family: sans-serif;
-  font-weight: 500;
-}
-
-.footer a {
-  margin: 0.5rem;
-  color: white;
-  font-family: sans-serif;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.contact-footer {
-  background-color: rgb(0, 0, 0);
-  border-radius: 4px;
-  box-shadow: 0px 0px 10px 5px rgba(70, 70, 70, 0.19);
-  margin: 0px 10px 5px 10px;
-  grid-column: 1;
-}
 .icons {
   text-align: center;
   height: 100%;
   width: 100%;
-}
-
-.locatie {
-  background-color: rgb(0, 0, 0);
-  border-radius: 4px;
-  box-shadow: 0px 0px 10px 5px rgba(70, 70, 70, 0.19);
-  margin: 0px 10px 5px 10px;
-  grid-column: 2;
-}
-
-.links {
-  background-color: rgb(0, 0, 0);
-  border-radius: 4px;
-  box-shadow: 0px 0px 10px 5px rgba(70, 70, 70, 0.19);
-  margin: 0px 10px 5px 10px;
-  grid-column: 3;
 }
 
 /* ------------------------------------- leden styling ------------------------------------- */
@@ -418,7 +352,7 @@ textarea {
   grid-template-columns: 0.2fr 1fr 1fr 1fr 0.2fr;
   display: grid;
   position: relative;
-  height: 100vh;
+  height: auto;
 }
 
 .lid {
@@ -426,7 +360,7 @@ textarea {
   grid-column: 2/5;
   grid-template-columns: 2fr 2fr 2fr;
   border-radius: 5px;
-  margin-bottom: 10rem;
+  margin-bottom:5rem;
 }
 
 .lid1 {
@@ -499,26 +433,28 @@ textarea {
 .word-lid-1 {
   grid-column: 2;
   grid-row: 2;
-  padding-left: 80px;
   max-height: 25rem;
+  display: flex;
+  justify-content: center;
 }
 
 .word-lid-2 {
   grid-column: 4;
   grid-row: 2;
-  padding-left: 80px;
   max-height: 25rem;
+  display: flex;
+  justify-content: center;
 }
 
 .word-lid-image {
   margin: 1px;
-  width: fit-content;
-  height: fit-content;
-  width: 25rem;
+  width: 80%;
+  height: 100%;
 }
 
-.word-lid-image2{
-height: 25rem;
+.word-lid-image2 {
+  width: 80%;
+  height: 100%;
 }
 
 .word-lid-info h2 {
@@ -631,11 +567,6 @@ height: 25rem;
     grid-row: 3;
   }
 
-  .nieuws-content {
-    grid-template-columns: 4rem 1fr 4rem;
-    grid-template-rows: 8rem 1fr 10rem;
-  }
-
   /* ------------------------------------- responsive about styling ------------------------------------- */
 
   .About {
@@ -651,33 +582,18 @@ height: 25rem;
     grid-column: 2;
     grid-row: 2;
     padding: 0rem;
-    height:fit-content;
     overflow: scroll;
   }
 
   .img-about {
-    max-height:fit-content;
-    max-width:fit-content;
+    max-height: fit-content;
+    max-width: fit-content;
     grid-column: 3;
     grid-row: 2;
+    height: auto;
   }
 
-  
-
-  /* ------------------------------------- responsive footer styling ------------------------------------- */
-
-  .footer {
-    padding: 0;
-    position: relative;
-    width: 100%;
-    bottom: -10rem;
-    display: grid;
-    background-color: black;
-    grid-row: 7;
-    grid-column: 1/8;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    height: 13rem;
-  }
+  /* ------------------------------------- responsive about.html styling ------------------------------------- */
 
   .About1 {
     min-height: 50%;
@@ -693,7 +609,7 @@ height: 25rem;
     grid-column: 2;
     padding: 2rem 3rem;
     border-radius: 8px;
-    margin:0%;
+    margin: 0%;
   }
 
   .img-about2 {
@@ -713,30 +629,30 @@ height: 25rem;
     height: 20rem;
   }
 
-  
-
-  /* ------------------------------------- phone contact.html styling -----------------------------------*/
-
-  .containercontact {
-    grid-template-columns: 1rem 1fr 1rem;
-    grid-template-rows: 1rem auto 1rem;
-  }
+  /* ------------------------------------- ipad contact.html styling -----------------------------------*/
 
   .context-box {
     margin: 0;
-    grid-template-rows: 1rem auto auto 1rem;
   }
 
-  .left {
-    grid-column: 1/3;
-    grid-row: 3;
-    min-height: 200px;
+  .containercontact {
+    position: relative;
+    display: grid;
+    grid-template-columns: 0.1fr 1fr 0.1fr;
+    grid-template-rows: 0.2fr 1fr 0.1fr;
+    height: calc(100vh - 128px - 112px);
   }
 
-  .right {
-    grid-column: 1/3;
-    margin-bottom: 20px;
-    grid-row: 2;
+  .area {
+    height: 300px;
+  }
+
+  /* ------------------------------------- news.html styling ------------------------------------- */
+
+  .nieuws-content {
+    grid-template-columns: 0.2fr 1fr 0.2fr;
+    grid-template-rows: 0.2fr 1fr 0.1fr;
+    height: calc(100vh - 128px - 112px);
   }
 
   /* ------------------------------------- leden styling ------------------------------------- */
@@ -791,7 +707,7 @@ height: 25rem;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.9);
   }
-  
+
   .lid-logo {
     grid-column: 1;
     padding: 0.5rem;
@@ -805,6 +721,44 @@ height: 25rem;
     margin-left: 10px;
     border-radius: 4px;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  }
+
+  /* ------------------------------------- word-lid styling ------------------------------------- */
+
+  .content-word-lid {
+    position: relative;
+    display: grid;
+    padding: 5rem 0 10rem 0;
+    grid-template-columns: 0.1fr 1fr 0.1fr;
+    grid-template-rows: 0.5fr auto 1rem auto 2rem auto;
+  }
+
+  .word-lid-1 {
+
+    grid-row: 2;
+    max-height: 25rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .word-lid-2 {
+    grid-column: 2;
+    grid-row: 4;
+    max-height: 25rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .word-lid-image {
+    height: auto;
+  }
+
+  .word-lid-info {
+    grid-column: 2;
+    grid-row: 6;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 40px;
+    border-radius: 10px;
   }
 }
 
@@ -842,98 +796,43 @@ height: 25rem;
     margin: 1.5rem 0 0 0;
   }
 
-  .navbar-brand .uil {
-    font-size: 40px;
+  /* ------------------------------------- responsive footer styling ------------------------------------- */
+
+  .icons li {
+    padding: 0 10px 0 10px;
   }
 
-  .social-links .uil {
-    color: #f7f3f3;
-    font-size: 20px;
-    display: block;
-    margin: 5px 0;
-  }
-  .social-links .uil:hover {
-    color: #00ffff;
-  }
-
-  .footer {
-    bottom: 0;
-    padding: 0;
-    position: relative;
-  }
+  /* ------------------------------------- responsive about.html styling ------------------------------------- */
 
   .About1 {
     padding: 5rem 1rem 1rem 1rem;
     grid-template-columns: 0.01fr 1fr 0.01fr;
-    grid-template-rows: 2rem auto 3rem auto 2rem;
+    grid-template-rows: 2rem auto 3rem auto 3rem auto 2rem;
   }
 
   .Text2 {
     overflow: scroll;
-    max-height: 25rem;
-    width: 20rem;
+    height: 25rem;
     grid-row: 2;
     grid-column: 2;
   }
 
   .img-about2 {
-    background-size: cover;
     grid-row: 4;
     grid-column: 2;
-    width: 20rem;
-    height: 200px;
-    padding: 0 0 0 20px;
+    padding: 0;
   }
-
 
   .about-content {
     height: auto;
     padding-top: 0;
   }
 
-  /* ------------------------------------- word-lid styling ------------------------------------- */
-  .content-word-lid {
-    padding: 0;
-    grid-template-columns: 1rem 10rem 1rem;
-    grid-template-rows: 2rem auto 1rem auto 2rem auto;
-  }
-
-  .word-lid-info {
-    grid-column: 2;
+  .Text3 {
     grid-row: 6;
-    padding: 10px;
-  }
-
-  .word-lid-image2 {
-  }
-
-  .word-lid-image {
-    
-  }
-
-  .word-lid-1{
     grid-column: 2;
-    grid-row: 2;
-    width:fit-content;
     height: 25rem;
-    padding-left:0;
-  }
-
-  .word-lid-2{
-    grid-column: 2;
-    grid-row: 4;
-    width:fit-content;
-    padding-left:0;
-
-  }
-
-  .word-lid-info h2 {
-    font-size: 35px;
-  }
-
-  .word-lid-info h3 {
-    font-size: 25px;
-  }
+  } 
 
   /* ------------------------------------- leden styling ------------------------------------- */
 
@@ -988,5 +887,54 @@ height: 25rem;
     margin-left: 10px;
     border-radius: 4px;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  }
+
+  /* ------------------------------------- word-lid styling ------------------------------------- */
+
+  .content-word-lid {
+    position: relative;
+    display: grid;
+    padding:  0 0 2rem 0;
+    grid-template-columns: 0.2fr 1fr 0.2fr;
+    grid-template-rows: 1rem auto 1rem auto 2rem auto;
+  }
+
+  .word-lid-1 {
+
+    grid-row: 2;
+    max-height: 25rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .word-lid-2 {
+    grid-column: 2;
+    grid-row: 4;
+    max-height: 25rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .word-lid-image {
+    height: auto;
+  }
+
+  .word-lid-info {
+    grid-column: 2;
+    grid-row: 6;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    width: auto;
+  }
+
+  /* ------------------------------------- phone contact.html styling -----------------------------------*/
+
+  .area {
+    height: 150px;
+  }
+
+  .right{
+    padding:0;
   }
 }
