--- a/popup/style2.css
+++ b/popup/style2.css
@@ -17,7 +17,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 1099;
+	z-index: 10990000;
 	background-color:rgba(0,0,0,0.6);
 	visibility: hidden;
 	opacity: 0;
@@ -32,7 +32,7 @@
 	width: 45%;
 	position: absolute;
 	left: 50%;
-	top: 40%;
+	top: 50%;
 	transform:translate(-50%,-50%);
 	display: flex;
 	flex-wrap: wrap;
