--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ ul li .link {
   display: grid;
   grid-template-columns: 0.3fr 1fr 0.3fr;
   grid-template-rows: 0.2fr 1fr 0.1fr;
-  height: 75vh;
+  height: calc(100vh - 128px - 112px);
 }
 
 .api4 {
@@ -337,7 +337,7 @@ textarea {
   width: 100%;
   display: flexbox;
   background-color: rgb(22, 22, 22);
-  bottom: 0;
+  bottom: 0px;
   grid-template-columns: 1fr;
   height: 8rem;
 }
