--- a/css/style.css
+++ b/css/style.css
@@ -230,16 +230,15 @@ h1 {
 }
 
 .img-about2 {
+  width: 100%;
+  height: 100%;
   grid-row: 2/4;
   grid-column: 4;
   padding: 1rem 2rem;
   max-width: 50rem;
   max-height: 50rem;
-  width: 100%;
-  height: 100%;
-  border-radius: 0px;
-  margin: 0rem;
 }
+
 
 /* ------------------------------------- contact.html styling -----------------------------------*/
 
@@ -247,14 +246,15 @@ h1 {
   position: relative;
   display: grid;
   grid-template-columns: 0.1fr 1fr 0.1fr;
-  grid-template-rows: 0.1fr 1fr auto;
-  height: auto;
+  grid-template-rows: 0.1fr 1fr;
+  min-height: calc(100vh - 128px - 112px);
 }
 
 .context-box {
   margin: 0 5rem 5rem 5rem;
   grid-column: 2;
   grid-row: 2;
+  height:auto;
 }
 
 .right {
@@ -643,7 +643,7 @@ textarea {
     display: grid;
     grid-template-columns: 0.1fr 1fr 0.1fr;
     grid-template-rows: 0.2fr 1fr 0.1fr;
-    height: calc(100vh - 128px - 112px);
+    min-height: calc(100vh - 128px - 112px);
   }
 
   .area {
@@ -895,11 +895,10 @@ textarea {
   /* ------------------------------------- word-lid styling ------------------------------------- */
 
   .content-word-lid {
-    position: relative;
-    display: grid;
     padding:  0 0 2rem 0;
-    grid-template-columns: 0.2fr 1fr 0.2fr;
+    margin: 0;
     grid-template-rows: 1rem auto 1rem auto 2rem auto;
+    justify-content: center;
   }
 
   .word-lid-1 {
@@ -928,7 +927,7 @@ textarea {
     background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
     border-radius: 10px;
-    width: auto;
+    width: 100%;
   }
 
   /* ------------------------------------- phone contact.html styling -----------------------------------*/
@@ -937,7 +936,11 @@ textarea {
     height: 150px;
   }
 
+  .containercontact {
+    grid-template-rows: 0.1fr 1fr 0.1fr;
+  }
+
   .right{
-    padding:0;
+    padding:15px;
   }
 }
