--- a/css/style.css
+++ b/css/style.css
@@ -231,12 +231,14 @@ h1 {
 
 .img-about2 {
   width: 100%;
-  height: 100%;
+  height: auto;
   grid-row: 2/4;
   grid-column: 4;
   padding: 1rem 2rem;
   max-width: 50rem;
   max-height: 50rem;
+  align-self: center;
+  border-radius: 6%;
 }
 
 
