--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ ul li .link {
   padding: 0.5rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
+  overflow: scroll;
 }
 
 .api2 {
@@ -116,6 +117,7 @@ ul li .link {
   padding: 0.5rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
+  overflow: scroll;
 }
 
 .api3 {
@@ -125,6 +127,7 @@ ul li .link {
   padding: 0.5rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
+  overflow: scroll;
 }
 
 /* ------------------------------------- news.html styling ------------------------------------- */
@@ -145,6 +148,7 @@ ul li .link {
   padding: 1rem;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
+  overflow: scroll;
 }
 
 /* ------------------------------------- about styling ------------------------------------- */
