--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,11 @@ body {
 }
 
 /* --------------------------------------------- Styling navigation --------------------------------------------- */
-nav > .nav-btn {
+nav>.nav-btn {
   display: none;
 }
 
-nav > #nav-check {
+nav>#nav-check {
   display: none;
 }
 
@@ -169,6 +169,7 @@ ul li .link {
   grid-row: 2/4;
   padding: 1rem;
   border-radius: 4px;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.9);
   overflow: hidden;
 }
@@ -260,7 +261,7 @@ h1 {
   margin: 0 5rem 5rem 5rem;
   grid-column: 2;
   grid-row: 2;
-  height:auto;
+  height: auto;
 }
 
 .right {
@@ -368,7 +369,7 @@ textarea {
   grid-column: 2/5;
   grid-template-columns: 2fr 2fr 2fr;
   border-radius: 5px;
-  margin-bottom:5rem;
+  margin-bottom: 5rem;
 }
 
 .lid1 {
@@ -406,6 +407,7 @@ textarea {
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.9);
 }
+
 .lid-logo {
   grid-column: 1;
   padding: 0.5rem;
@@ -415,7 +417,7 @@ textarea {
 
 .lid-info {
   grid-column: 2;
-  font-size:0.9rem;
+  font-size: 0.9rem;
   padding: 0.5rem;
   margin-left: 10px;
   border-radius: 4px;
@@ -484,14 +486,14 @@ textarea {
     margin: 4%;
   }
 
-  nav > .nav-btn {
+  nav>.nav-btn {
     display: inline-block;
     position: absolute;
     right: 0px;
     top: 0px;
   }
 
-  nav > .nav-btn > label {
+  nav>.nav-btn>label {
     display: inline-block;
     width: 6.1rem;
     height: 6.1rem;
@@ -499,19 +501,19 @@ textarea {
     padding: 27px;
   }
 
-  nav > .nav-btn > label:hover,
-  nav #nav-check:checked ~ .nav-btn > label {
+  nav>.nav-btn>label:hover,
+  nav #nav-check:checked~.nav-btn>label {
     background-color: rgba(0, 0, 0, 0.3);
   }
 
-  nav > .nav-btn > label > span {
+  nav>.nav-btn>label>span {
     display: block;
     width: 3rem;
     height: 1rem;
     border-top: 6px solid #eee;
   }
 
-  nav > ul {
+  nav>ul {
     position: absolute;
     display: block;
     width: 100%;
@@ -524,17 +526,17 @@ textarea {
     margin: 0;
   }
 
-  nav > ul > .link {
+  nav>ul>.link {
     display: block;
     width: 100%;
   }
 
-  nav > #nav-check:not(:checked) ~ ul {
+  nav>#nav-check:not(:checked)~ul {
     height: 0px;
     z-index: 100;
   }
 
-  nav > #nav-check:checked ~ ul {
+  nav>#nav-check:checked~ul {
     height: calc(100vh - 50px);
     overflow-y: auto;
     z-index: 100;
@@ -546,6 +548,7 @@ textarea {
     border: 0px;
     text-decoration: underline white;
   }
+
   /* ------------------------------------- responsive content styling ------------------------------------- */
 
   .content {
@@ -774,6 +777,7 @@ textarea {
 /* ------------------------------------- smaller screen styling ------------------------------------- */
 
 @media only screen and (max-width: 720px) {
+
   /* ------------------------------------- responsive content styling ------------------------------------- */
   .content {
     display: grid;
@@ -841,7 +845,7 @@ textarea {
     grid-row: 6;
     grid-column: 2;
     height: 25rem;
-  } 
+  }
 
   /* ------------------------------------- leden styling ------------------------------------- */
 
@@ -901,7 +905,7 @@ textarea {
   /* ------------------------------------- word-lid styling ------------------------------------- */
 
   .content-word-lid {
-    padding:  0 0 2rem 0;
+    padding: 0 0 2rem 0;
     margin: 0;
     grid-template-rows: 1rem auto 1rem auto 2rem auto;
     justify-content: center;
@@ -946,7 +950,7 @@ textarea {
     grid-template-rows: 0.1fr 1fr 0.1fr;
   }
 
-  .right{
-    padding:15px;
+  .right {
+    padding: 15px;
   }
 }
