--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,30 @@ ul li .link {
   text-decoration: none;
 }
 
+/* --------------------------------------------- Styling scrollbar --------------------------------------------- */
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
 /* --------------------------------------------- Styling container --------------------------------------------- */
 
 .container {
