--- a/popup/style2.css
+++ b/popup/style2.css
@@ -1,72 +1,79 @@
-.body2{
+.body2 {
 	font-family: sans-serif;
-	margin:0;
+	margin: 0;
 	line-height: 1.5;
 	opacity: 95%;
 	text-align: center;
 }
 
-*{
+* {
 	box-sizing: border-box;
-	margin:0;
+	margin: 0;
 }
 
-.login-popup{
+.login-popup {
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	z-index: 10990000;
-	background-color:rgba(0,0,0,0.6);
+	background-color: rgba(0, 0, 0, 0.6);
 	visibility: hidden;
 	opacity: 0;
 	transition: all 1s ease;
 }
-.login-popup.show{
-	visibility:visible;
+
+.login-popup.show {
+	visibility: visible;
 	opacity: 1;
 }
-.login-popup .box{
-	background-color:#ffffff;
+
+.login-popup .box {
+	background-color: #ffffff;
 	width: 50%;
 	position: absolute;
 	left: 50%;
 	top: 40%;
-	transform:translate(-50%,-50%);
+	transform: translate(-50%, -50%);
 	display: flex;
 	flex-wrap: wrap;
 	opacity: 0;
 	margin-left: 50px;
+	border-radius: 25px;
 	transition: all 1s ease;
 
 }
-.login-popup.show .box{
+
+.login-popup.show .box {
 	opacity: 1;
 	margin-left: 0;
 }
-.login-popup .box .img-area{
-	flex:0 0 50%;
+
+.login-popup .box .img-area {
+	flex: 0 0 50%;
 	max-width: 40%;
 	position: relative;
 	overflow: hidden;
-	padding:30px;
+	padding: 30px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-.login-popup .box .img-area h1{
+
+.login-popup .box .img-area h1 {
 	font-size: 30px;
 }
-.login-popup .box .img-area .img{
+
+.login-popup .box .img-area .img {
 	position: absolute;
-	left:0;
-	top:0;
-	margin:auto;
+	left: 0;
+	top: 0;
+	margin: auto;
 	width: 90%;
 	height: 90%;
 	background-image: url('/img/logo-small.png');
-	background-repeat:no-repeat;
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-size: 90%;
 	background-position: center;
@@ -74,92 +81,106 @@
 	z-index: -1;
 	overflow-y: hidden;
 }
-@keyframes zoomInOut{
-	0%,100%{
+
+@keyframes zoomInOut {
+
+	0%,
+	100% {
 		transform: scale(1);
 	}
-	50%{
+
+	50% {
 		transform: scale(1.1);
 	}
 }
-.login-popup .box .form{
-	flex:0 0 50%;
+
+.login-popup .box .form {
+	flex: 0 0 50%;
 	max-width: 50%;
-	padding:50px 40px;
+	padding: 50px 40px;
 }
 
-.login-popup .box .form h1{
-	color:#000000;
+.login-popup .box .form h1 {
+	color: #000000;
 	font-size: 30px;
-	margin:0 0 30px;
+	margin: 0 0 30px;
 }
-.login-popup .box .form .form-control{
+
+.login-popup .box .form .form-control {
 	height: 45px;
 	margin-bottom: 30px;
 	width: 100%;
-	border:none;
-	border-bottom:1px solid #cccccc;
+	border: none;
+	border-bottom: 1px solid #cccccc;
 	font-size: 15px;
-	color:#000000;
+	color: #000000;
 }
-.login-popup .box .form .form-control:focus{
-	outline: none;
-}
-.login-popup .box .form label{
-	font-size: 15px;
-	color:#555555;
-}
-.login-popup .box .form .btn{
-	width: 100%;
-	background-color: #0c0ce0;
-	margin-top:40px;
-	height: 45px;
-	border:none;
-	border-radius: 25px;
-	font-size: 15px;
-	text-transform: uppercase;
-	color:#ffffff;
-	cursor: pointer;
-}
-.login-popup .box .form .btn:focus{
+
+.login-popup .box .form .form-control:focus {
 	outline: none;
 }
 
-.login-popup .box .form .close{
+.login-popup .box .form label {
+	font-size: 15px;
+	color: #555555;
+}
+
+.login-popup .box .form .btn {
+	width: 100%;
+	background-color: #0c0ce0;
+	margin-top: 40px;
+	height: 45px;
+	border: none;
+	border-radius: 25px;
+	font-size: 15px;
+	text-transform: uppercase;
+	color: #ffffff;
+	cursor: pointer;
+}
+
+.login-popup .box .form .btn:focus {
+	outline: none;
+}
+
+.login-popup .box .form .close {
 	position: absolute;
 	right: 10px;
-	top:0px;
+	top: 0px;
 	font-size: 30px;
 	cursor: pointer;
 }
 
 /*responsive*/
-@media(max-width: 767px){
-	.login-popup .box{
+@media(max-width: 767px) {
+	.login-popup .box {
 		width: calc(100% - 30px);
 		top: 25rem;
 	}
-	.login-popup .box .img-area{
+
+	.login-popup .box .img-area {
 		display: none;
 	}
-	.login-popup .box .form{
+
+	.login-popup .box .form {
 		flex: 0 0 100%;
-        max-width: 100%;
+		max-width: 100%;
 	}
 }
 
 
 @media only screen and (max-width: 1042px) {
-	.login-popup .box{
+	.login-popup .box {
 		width: calc(100% - 30px);
 		top: 25rem;
 	}
-	.login-popup .box .img-area{
+
+	.login-popup .box .img-area {
 		display: none;
 	}
-	.login-popup .box .form{
+
+	.login-popup .box .form {
 		flex: 0 0 100%;
-        max-width: 100%;
+		max-width: 100%;
 	}
 
 }
