--- a/css/style.css
+++ b/css/style.css
@@ -74,23 +74,25 @@ ul li .link {
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px lightgray; 
+  box-shadow: inset 0 0 5px lightgray;
   border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: grey; 
+  background: grey;
   border-radius: 10px;
+  height: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: darkgrey; 
+  background: darkgrey;
 }
 
 /* --------------------------------------------- Styling container --------------------------------------------- */
