--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,11 @@ ul li .link {
   scrollbar-width: none;
 }
 
+#api3{
+  font-size: 1.5rem;
+  padding: 15px;
+}
+
 /* ------------------------------------- news.html styling ------------------------------------- */
 
 .nieuws-content {
@@ -182,6 +187,7 @@ ul li .link {
   background-color: rgba(255, 255, 255, 0.9);
   overflow: scroll;
 }
+
 
 /* ------------------------------------- about styling ------------------------------------- */
 
