--- a/css/style.css
+++ b/css/style.css
@@ -128,35 +128,35 @@ ul li .link {
 
 .api1 {
   grid-column: 1;
-  height: 25rem;
+  height: 30rem;
   margin: 0.5rem;
   padding: 0.5rem;
-  border-radius: 25px;
-  background-color: rgba(207, 216, 238, 0.9);
+  border-radius: 14px;
+  background-color: rgba(255, 255, 255, 0.9);
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
 }
 
 .api2 {
-  height: 25rem;
+  height: 30rem;
   grid-column: 2;
   margin: 0.5rem;
   padding: 0.5rem;
-  border-radius: 25px;
-  background-color: rgba(207, 216, 238, 0.9);
+  border-radius: 14px;
+  background-color: rgba(255, 255, 255, 0.9);
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: none;
 }
 
 .api3 {
-  height: 25rem;
+  height: 30rem;
   grid-column: 3;
   margin: 0.5rem;
   padding: 0.5rem;
-  border-radius: 25px;
-  background-color: rgba(207, 216, 238, 0.9);
+  border-radius: 14px;
+  background-color: rgba(255, 255, 255, 0.9);
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: none;
@@ -165,6 +165,7 @@ ul li .link {
 #api3{
   font-size: 1.5rem;
   padding: 15px;
+  
 }
 
 /* ------------------------------------- news.html styling ------------------------------------- */
@@ -177,14 +178,15 @@ ul li .link {
 }
 
 .api4 {
-  min-height: 50vh;
+  color: white;
+  min-height: 70vh;
   height: 80%;
   grid-column: 2;
   grid-row: 2;
   margin: 1rem 0 1rem 0;
   padding: 1rem;
   border-radius: 4px;
-  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
   overflow: scroll;
 }
 
@@ -206,7 +208,7 @@ ul li .link {
   grid-column: 2/4;
   grid-row: 2/4;
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 14px;
   background-color: rgba(255, 255, 255, 0.9);
   overflow: hidden;
 }
@@ -224,7 +226,7 @@ h1 {
   max-height: 24rem;
   width: 100%;
   height: 100%;
-  border-radius: 25px;
+  border-radius: 14px;
   margin: 1rem;
 }
 
