--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,9 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 14px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
@@ -144,7 +146,9 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 14px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: none;
@@ -156,7 +160,9 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 14px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: none;
@@ -178,6 +184,8 @@ ul li .link {
 }
 
 .api4 {
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
   color: white;
   min-height: 70vh;
   height: 80%;
@@ -186,8 +194,6 @@ ul li .link {
   margin: 1rem 0 1rem 0;
   padding: 1rem;
   border-radius: 14px;
-  background-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
   overflow: scroll;
 }
 
@@ -210,7 +216,9 @@ ul li .link {
   grid-row: 2/4;
   padding: 1rem;
   border-radius: 14px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   overflow: hidden;
 }
 
@@ -255,7 +263,9 @@ h1 {
 }
 
 .Text2 {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   grid-row: 2;
   grid-column: 2;
   margin-bottom: 2rem;
@@ -265,7 +275,9 @@ h1 {
 }
 
 .Text3 {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   grid-row: 3;
   grid-column: 2;
   border-radius: 25px;
@@ -477,7 +489,9 @@ textarea {
 .word-lid-info {
   grid-column: 2/5;
   grid-row: 4;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  color: white;
   padding: 40px;
   border-radius: 10px;
 }
